<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">


    <RelativeLayout
        android:id="@+id/vgProfile"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProfile"
            android:layout_centerHorizontal="true"
            android:src="@drawable/p13"
            android:layout_width="60dp"
            android:layout_height="70dp"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/vgCompany"
        android:layout_below="@+id/vgProfile"
        android:layout_width="match_parent"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="40dp"
        android:layout_height="wrap_content">

        <in.effcode.App.Views.TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:gravity="left"
            android:hint="@string/eduknox"
            android:lineSpacingExtra="4dp"
            android:text="@string/account_create"
            android:textColor="@color/black_transparent_dark"
            android:textColorHint="@color/black_transparent_dark"
            android:textSize="20dp"
            custom:customTypeface="MavenPro-Bold"/>

        <!--<TextView-->
            <!--android:id="@+id/tvTitle"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="60dp"-->
            <!--android:layout_marginBottom="20dp"-->
            <!--android:gravity="left"-->
            <!--android:hint="@string/eduknox"-->
            <!--android:lineSpacingExtra="4dp"-->
            <!--android:text="@string/account_create"-->
            <!--android:textColor="@color/black_transparent_dark"-->
            <!--android:textColorHint="@color/black_transparent_dark"-->
            <!--android:textSize="20dp"-->
            <!--custom:customTypeface="Bold"-->
            <!--custom:fontFamily="maven_pro"-->
            <!--/>-->
        <in.effcode.App.Views.TextView
            android:id="@+id/tvDescription"
            android:layout_below="@+id/tvTitle"
            android:layout_width="match_parent"
            android:hint="@string/eduknox"
            android:gravity="left"
            android:lineSpacingExtra="4dp"
            android:text="@string/account_description"
            android:textSize="15dp"
            android:textColorHint="@color/black_transparent_dark"
            android:textColor="@color/black_transparent_dark"
            android:layout_height="60dp"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/vgMobile"
            android:layout_width="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="30dp"
            android:layout_above="@+id/vgSubmit"
            android:layout_height="wrap_content">

            <in.effcode.App.Views.EditText
                android:id="@+id/etMobileNumber"
                android:layout_width="match_parent"
                android:hint="@string/enter_phone"
                android:textSize="15dp"
                android:inputType="number"
                android:layout_height="60dp"/>

            <!--<view-->
                <!--android:layout_marginTop="-10dp"-->
                <!--android:layout_below="@+id/etMobileNumber"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="0.5dp"/>-->

            <in.effcode.App.Views.EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_below="@+id/etMobileNumber"
                android:hint="@string/password"
                android:textSize="15dp"
                android:inputType="textPassword"
                android:layout_height="60dp"/>

            <!--<view-->
                <!--android:layout_marginTop="-10dp"-->
                <!--android:layout_below="@+id/etPassword"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="0.5dp"/>-->
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/vgSubmit"
            android:layout_marginBottom="25dp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="70dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/btnSubmit"
                    android:layout_width="60dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_arrow_right_white"
                    android:backgroundTint="@color/black_transparent_dark"
                    android:layout_height="match_parent" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
